# web_scraping

./: basics_commands.txt  pyproject.toml
02. src/01. scraping/: web_scraping.py  ws_amazon.py  ws_mercado_livre.py
data/raw_data/: scraping_data.xlsx
src/: main.py
src/rules/: __init__.py  product_url.py
src/scraping/: __init__.py  web_scraping.py  ws_amazon.py  ws_mercado_livre.py
